remove hangOn() and subtitute with built-in Sleep() to reduce CPU usage

--- a/_02Tetris/_02Tetris.vcxproj
+++ b/_02Tetris/_02Tetris.vcxproj
@@ -153,8 +153,8 @@
     <ClCompile Include="Tetromino.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\readme.md" />
     <None Include="FragmentShader.glsl" />
-    <None Include="readme.md" />
     <None Include="VertexShader.glsl" />
   </ItemGroup>
   <ItemGroup>
